--- a/resources/sass/custom/_navigationMain.scss
+++ b/resources/sass/custom/_navigationMain.scss
@@ -1,4 +1,4 @@
-.navigation-bar{
+.navigation-main{
     background-color: red;
     .navi-bar{
         &__brand{}
